# story-analytics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DATATABLE_BUG_INVESTIGATION.md  DATA_CONTEXT_SPEC.md  DEV_LOG.md  DEV_PLAN.md  Dockerfile.api  Dockerfile.evidence  Dockerfile.prod  LICENSE  PROJECT_STATUS.md  README.md  SEMANTIC_LAYER_SPEC.md  TESTING.md  brand_config.yaml  dev.sh  docker-compose.yml  engine_config.yaml  evidence.config.yaml  olist_sql_queries.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  single_test_churn.txt  test_results.txt  test_results_final.txt  test_results_v2.txt  test_suggested_charts.py
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
api/: __init__.py  auth_simple.py  config.py  database.py  dependencies.py  email.py  main.py  security.py
app/: embed.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
business-records/: business-records.md
deploy/: __init__.py  aws.py  cli.py  cloudformation.yaml
desktop/: build.sh  dmgbuild-settings.py  package-lock.json  package.json  runtime_hook_paths.py  server_entry.py  story-analytics.spec
docs/: API.md  deploy-aws.md  llm-context-architecture.md  olist_business_context.md  v2-product-spec.md
engine/: __init__.py  __main__.py  brand.py  chart_conversation.py  chart_pipeline.py  cli.py  config.py  config_loader.py  conversation.py  dashboard_composer.py  generator.py  metric_compiler.py  parser.py  progress.py  qa.py  schema.py  semantic.py  semantic_generator.py  sql_validator.py  (+1 more)
(+692 files in other folders)
